# Minority-report-project

./: .gitignore  LICENSE  README.md  main.py
.github/workflows/: c.yaml
CNN/Dataset/: landmark_drawer.py
CNN/ML_code/: dataset_builder.ipynb  dataset_builder_useless.ipynb  main.py  main_slow.py  main_useless.py  mkdir.sh  model_test.py
CNN/ML_gesture_results/: ml_gesture.ipynb  ml_gesture.py
CNN/ML_video_results/: confusion_matrix_depth.npy  confusion_matrix_rgb_reduced.npy
CNN/ML_weights_sign/: rgb_landmark_log.txt
CNN/redim_image/: main.py
CPP_code/photo_taker/: CMakeLists.txt  PhotoTaker.cpp
Camera Roll/: desktop.ini
Dataset/: hope_counter.sh
Driver/procfs_test/: Makefile  minority_report_driver.c
Driver/uinput/: Makefile  compile_module.sh  event_codes.h  main.c  python_module.cpp  python_module.i  uinput_api.c  uinput_api.h
ML/: README.md  benchmark_ml.py  ml.py  ml_test.ipynb  tf_lite_converter.ipynb  tf_lite_converter.py  video_depth_reduced_2_weights.tflite  video_rgb_reduced_2_weights.tflite
ML/Docker_image_tf_gpu/: Dockerfile  README.md  (+4 more)
ML_code/: dataset_builder.ipynb  main.py
Misc/: README.md
PI_setup/: Installation_links.txt  README.md  Raspberry-Pi-4-and-Intel-RealSense-D435.md  req.txt  setup.sh  setup_2.sh
code_test/: CMakeLists.txt  basicProgram.cpp
photo_taker/: CMakeLists.txt  PhotoTaker.cpp  PhotoTaker.h  main.cpp  photoMover.sh
src/: real_time_app.py  tmp.txt
test_real_time/: main.py  main_video.py  test_Mediapipe.py  tmp.ipynb
video_taker/: folder_creator.py  hope_counter.sh  image_resizer.py  main.py
(+80 files in other folders)
